Fixed spacing

--- a/waybar/style-dark.css
+++ b/waybar/style-dark.css
@@ -1,7 +1,3 @@
-* {
-    font-family: "Liberation Mono";
-}
-
 window#waybar {
     background-color: transparent;
 }
@@ -17,6 +13,7 @@ window#waybar {
 }
 
 .modules-right:last-child {
+    margin-right: 0;
     margin-right: 10px;
 }
 
@@ -25,13 +22,16 @@ window#waybar {
 #light,
 #system,
 #clock {
+    margin-right: 2.5px;
     border-radius: 3px;
     background-color: #383838;
+    font-family: "Liberation Mono";
 }
 
 #hardware .module,
 #light .module,
-#system .module {
+#system .module,
+#clock .module {
     background-color: transparent;
 }
 
@@ -42,8 +42,8 @@ window#waybar {
     padding: 2.5px 7.5px;
 }
 
-#custom-power {
-    padding-right: 1px;
+#clock {
+    padding-right: 5px;
 }
 
 #memory {
